samples/_failures_safe/1761222626_38d376_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bf434f45.c: In function ‘print_stats’:
./samples/SAFE/__tmp_bf434f45.c:152:12: error: expected identifier at end of input
  152 |            analyzer->
      |            ^~~~~~~~
./samples/SAFE/__tmp_bf434f45.c:152:12: error: expected declaration or statement at end of input
